Add scratch working tool

--- a/server/pubspec.yaml
+++ b/server/pubspec.yaml
@@ -5,6 +5,8 @@ dependencies:
   shelf_static: any
   shelf_route: any
   path: any
+  flutter_tools:
+    path: /Users/lukechurch/GitRepos/flutter/packages/flutter_tools
 
   # flutter:
     # path: ../../flutter/packages/flutter
