--- a/verify_sanity/pubspec.yaml
+++ b/verify_sanity/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_server
+name: verify_sanity
 description: A new flutter project.
 dependencies:
   shelf: any
@@ -6,7 +6,7 @@ dependencies:
   shelf_route: any
   path: any
   flutter_tools:
-    path: ../../GitRepos/flutter/packages/flutter_tools
+    path: ../../GitRepos/flutter/packages/flutter_tools/
 
   flutter:
-     path: ../../GitRepos/flutter/packages/flutter
+     path: ../../GitRepos/flutter/packages/flutter/
