--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -2,4 +2,6 @@ name: myapp
 description: A new flutter project.
 dependencies:
   flutter:
-    path: ../../flutter/packages/flutter
+    path: /Users/gbracha/gbracha-flutter/packages/flutter
+  flutter_tools:
+    path: /Users/gbracha/gbracha-flutter/packages/flutter_tools
