update mutation_runner to run on flutter head (6469b475d2b63b005128936602ec586992be9215)

--- a/mutation_runner/pubspec.yaml
+++ b/mutation_runner/pubspec.yaml
@@ -1,6 +1,7 @@
 name: mutation_runner
 description: A new flutter project.
 dependencies:
+  process: any
   shelf: any
   shelf_static: any
   shelf_route: any
